Implemented default supported protocols for WARP origins (Http and Https), and implemented the rules for default ports and for extracting International Domain Names into ASCII. Also updated the conformance tests.
git-svn-id: https://svn.apache.org/repos/asf/incubator/wookie/trunk@946625 13f79535-47bb-0310-9956-ffa450edef68